# SnapToyApp

./: README.md  snapToy.cabal  stack.yaml
app/: Application.hs  Main.hs  Site.hs
app/Handlers/: About.hs  Home.hs
