name:                snapToy
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/snapToy#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable snapToy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Site
                     , Application
                     , Handlers.Home
                     , Handlers.About
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , snapToy
                     , snap-core == 1.0.1.0
                     , snap-server == 1.0.1.1
                     , snap == 1.0.0.1
                     , blaze-html == 0.8.1.3
                     , template-haskell == 2.11.0.0
                     , snap-blaze == 0.2.1.4
                     , unix
                     , bytestring
                     , lens                     
  default-language:    Haskell2010

test-suite snapToy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , snapToy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/snapToy
